--- a/Exam/src/exam/sample.fxml
+++ b/Exam/src/exam/sample.fxml
@@ -4,5 +4,5 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <GridPane fx:controller="exam.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+          xmlns:fx="http://javafx.com/fxml/11" alignment="center" hgap="10" vgap="10">
 </GridPane>
