--- a/Exam/src/exam/addpart.fxml
+++ b/Exam/src/exam/addpart.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="498.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="447.0" prefWidth="498.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="exam.Controller">
    <children>
       <Text layoutX="44.0" layoutY="60.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Part">
          <font>
@@ -22,7 +22,7 @@
          </toggleGroup></RadioButton>
       <RadioButton layoutX="236.0" layoutY="47.0" mnemonicParsing="false" text="Outsourced" toggleGroup="$partGroup" />
       <Button layoutX="236.0" layoutY="354.0" mnemonicParsing="false" text="Save" />
-      <Button layoutX="304.0" layoutY="354.0" mnemonicParsing="false" text="Cancel" />
+      <Button onAction="#closeWindow" layoutX="304.0" layoutY="354.0" mnemonicParsing="false" text="Cancel" />
       <Label layoutX="69.0" layoutY="124.0" text="ID" />
       <TextField disable="true" layoutX="145.0" layoutY="120.0" promptText="Auto Generated" />
       <Label layoutX="69.0" layoutY="163.0" text="Name" />
