--- a/Exam/src/exam/main.fxml
+++ b/Exam/src/exam/main.fxml
@@ -42,8 +42,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="434.0" prefWidth="1082.0" fx:controller="exam.Controller"
-      xmlns:fx="http://javafx.com/fxml">
+<VBox prefHeight="434.0" prefWidth="1082.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11" fx:controller="exam.Controller">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="413.0" prefWidth="1052.0" VBox.vgrow="ALWAYS">
       <children>
@@ -52,7 +51,7 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Text>
-            <Button layoutX="932.0" layoutY="389.0" mnemonicParsing="false" text="Exit" />
+            <Button fx:id="exitButton" onAction="#handleExit" layoutX="932.0" layoutY="389.0" mnemonicParsing="false" text="Exit" />
             <Pane layoutX="29.0" layoutY="69.0" prefHeight="283.0" prefWidth="482.0" style="-fx-border-style: solid; -fx-border-radius: 10;">
                <children>
                   <Text layoutX="34.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Parts">
@@ -69,7 +68,7 @@
                     </columns>
                   </TableView>
                   <TextField layoutX="311.0" layoutY="14.0" promptText="Search by Part ID or Name" />
-                  <Button layoutX="304.0" layoutY="250.0" mnemonicParsing="false" text="Add" />
+                  <Button fx:id="addPartButton" onAction="#openAddPart" layoutX="304.0" layoutY="250.0" mnemonicParsing="false" text="Add" />
                   <Button layoutX="348.0" layoutY="250.0" mnemonicParsing="false" text="Modify" />
                   <Button layoutX="408.0" layoutY="250.0" mnemonicParsing="false" text="Delete" />
                </children>
