--- a/Exam/src/exam/addproduct.fxml
+++ b/Exam/src/exam/addproduct.fxml
@@ -11,49 +11,51 @@
 <?import javafx.scene.text.Text?>
 
 
-<AnchorPane fx:controller="exam.controllers.Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="516.0" prefWidth="813.0" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Pane layoutX="14.0" layoutY="21.0" prefHeight="482.0" prefWidth="787.0" style="-fx-border-style: solid; -fx-border-radius: 5px;">
-         <children>
-            <Text layoutX="33.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Product">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Text>
-            <TextField id="searchPart" layoutX="580.0" layoutY="25.0" prefHeight="25.0" prefWidth="163.0" promptText="Search by Part ID or Name" />
-            <TextField disable="true" editable="false" layoutX="104.0" layoutY="99.0" promptText="Auto Gen - Disabled" />
-            <TextField id="productName" layoutX="104.0" layoutY="139.0" />
-            <TextField id="inventoryAmount" layoutX="104.0" layoutY="179.0" prefHeight="25.0" prefWidth="80.0" />
-            <TextField id="pricePerUnit" layoutX="104.0" layoutY="219.0" prefHeight="25.0" prefWidth="80.0" />
-            <TextField id="maximum" layoutX="104.0" layoutY="258.0" prefHeight="25.0" prefWidth="80.0" />
-            <TextField id="minimum" layoutX="231.0" layoutY="258.0" prefHeight="25.0" prefWidth="80.0" />
-            <Label layoutX="57.0" layoutY="103.0" text="ID" />
-            <Label layoutX="49.0" layoutY="143.0" text="Name" />
-            <Label layoutX="55.0" layoutY="183.0" text="Inv" />
-            <Label layoutX="50.0" layoutY="223.0" text="Price" />
-            <Label layoutX="49.0" layoutY="262.0" text="Max" />
-            <Label layoutX="198.0" layoutY="262.0" text="Min" />
-            <TableView layoutX="366.0" layoutY="64.0" prefHeight="135.0" prefWidth="377.0">
-              <columns>
-                <TableColumn prefWidth="75.0" text="Part ID" />
-                <TableColumn prefWidth="75.0" text="Part Name" />
-                  <TableColumn prefWidth="107.0" text="Inventory Level" />
-                  <TableColumn prefWidth="119.0" text="Price/ Cost per Unit" />
-              </columns>
-            </TableView>
-            <Button layoutX="705.0" layoutY="211.0" mnemonicParsing="false" text="Add" />
-            <TableView layoutX="366.0" layoutY="258.0" prefHeight="135.0" prefWidth="377.0">
-               <columns>
-                  <TableColumn prefWidth="75.0" text="Part ID" />
-                  <TableColumn prefWidth="75.0" text="Part Name" />
-                  <TableColumn prefWidth="107.0" text="Inventory Level" />
-                  <TableColumn prefWidth="119.0" text="Price/ Cost per Unit" />
-               </columns>
-            </TableView>
-            <Button id="saveButton" layoutX="636.0" layoutY="443.0" mnemonicParsing="false" text="Save" />
-            <Button onAction="#cancelClick" id="cancelButton" layoutX="698.0" layoutY="443.0" mnemonicParsing="false" text="Cancel" />
-            <Button id="removePart" layoutX="605.0" layoutY="405.0" mnemonicParsing="false" text="Remove Associated Part" />
-         </children>
-      </Pane>
-   </children>
+<AnchorPane fx:controller="exam.controllers.AddProductController" maxHeight="-Infinity" maxWidth="-Infinity"
+            minHeight="-Infinity" minWidth="-Infinity" prefHeight="516.0" prefWidth="813.0"
+            xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+   <Pane layoutX="14.0" layoutY="21.0" prefHeight="482.0" prefWidth="787.0"
+         style="-fx-border-style: solid; -fx-border-radius: 5px;">
+      <Text layoutX="33.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Product">
+         <font>
+            <Font name="System Bold" size="12.0"/>
+         </font>
+      </Text>
+      <TextField id="searchPart" layoutX="580.0" layoutY="25.0" prefHeight="25.0" prefWidth="163.0"
+                 promptText="Search by Part ID or Name"/>
+      <TextField fx:id="productId" disable="true" editable="false" layoutX="104.0" layoutY="99.0" promptText="Auto Gen - Disabled"/>
+      <TextField fx:id="productName" layoutX="104.0" layoutY="139.0"/>
+      <TextField fx:id="productStock" layoutX="104.0" layoutY="179.0" prefHeight="25.0" prefWidth="80.0"/>
+      <TextField fx:id="productPrice" layoutX="104.0" layoutY="219.0" prefHeight="25.0" prefWidth="80.0"/>
+      <TextField fx:id="productMax" layoutX="104.0" layoutY="258.0" prefHeight="25.0" prefWidth="80.0"/>
+      <TextField fx:id="productMin" layoutX="231.0" layoutY="258.0" prefHeight="25.0" prefWidth="80.0"/>
+      <Label layoutX="57.0" layoutY="103.0" text="ID"/>
+      <Label layoutX="49.0" layoutY="143.0" text="Name"/>
+      <Label layoutX="55.0" layoutY="183.0" text="Inv"/>
+      <Label layoutX="50.0" layoutY="223.0" text="Price"/>
+      <Label layoutX="49.0" layoutY="262.0" text="Max"/>
+      <Label layoutX="198.0" layoutY="262.0" text="Min"/>
+      <TableView fx:id="unrelatedParts" layoutX="366.0" layoutY="64.0" prefHeight="135.0" prefWidth="377.0">
+         <columns>
+            <TableColumn fx:id="unrelatedPartId" prefWidth="75.0" text="Part ID"/>
+            <TableColumn fx:id="unrelatedPartName" prefWidth="75.0" text="Part Name"/>
+            <TableColumn fx:id="unrelatedPartLevel" prefWidth="107.0" text="Inventory Level"/>
+            <TableColumn fx:id="unrelatedPartPrice" prefWidth="119.0" text="Price/ Cost per Unit"/>
+         </columns>
+      </TableView>
+      <Button onAction="#addAssociatedPart" layoutX="705.0" layoutY="211.0" mnemonicParsing="false" text="Add"/>
+      <TableView fx:id="relatedParts" layoutX="366.0" layoutY="258.0" prefHeight="135.0" prefWidth="377.0">
+         <columns>
+            <TableColumn fx:id="relatedPartId" prefWidth="75.0" text="Part ID"/>
+            <TableColumn fx:id="relatedPartName" prefWidth="75.0" text="Part Name"/>
+            <TableColumn fx:id="relatedPartLevel" prefWidth="107.0" text="Inventory Level"/>
+            <TableColumn fx:id="relatedPartPrice" prefWidth="119.0" text="Price/ Cost per Unit"/>
+         </columns>
+      </TableView>
+      <Button onAction="#addProduct" layoutX="636.0" layoutY="443.0" mnemonicParsing="false" text="Save"/>
+      <Button onAction="#cancelClick" id="cancelButton" layoutX="698.0" layoutY="443.0" mnemonicParsing="false"
+              text="Cancel"/>
+      <Button onAction="#removeAssociatedPart" layoutX="605.0" layoutY="405.0" mnemonicParsing="false"
+              text="Remove Associated Part"/>
+   </Pane>
 </AnchorPane>
